<resources>
    <string name="app_name">Осмотр ПС Кустовая</string>

    <string name="hello_blank_fragment">Осмотры</string>
    <string name="title_inspections">Осмотры</string>
    <string name="oil_level">Уровень масла</string>
    <string name="purging">Продувка</string>
    <string name="purging_level">Уровень продувки</string>
    <string name="purging_level_I_element">Уровень продувки I эл.</string>
    <string name="purging_level_II_element">Уровень продувки II эл.</string>
    <string name="gas_pressure">Давление элегаза</string>
    <string name="f_A">А</string>
    <string name="f_B">В</string>
    <string name="f_C">С</string>
    <string name="up">верх</string>
    <string name="down">низ</string>
    <string name="zero_zero">0,0</string>
    <string name="feeder">Присоединение</string>
    <string name="v_220_header"><![CDATA[В-220\nПродувка]]></string>
    <string name="tt_220_header"><![CDATA[ТТ-220\nУровень масла]]></string>
    <string name="export_to_excel">Экспорт в Excel</string>
    <string name="clear_data">Очистить данные</string>
    <string name="breaker">Выключатель</string>
    <string name="current_transformer">Трансформатор тока</string>


    <string name="oru_35">ОРУ-35</string>
    <string name="tsn4">4ТСН</string>
    <string name="tsn_2">2ТСН</string>
    <string name="tsn_3">3ТСН</string>
    <string name="tt_35_2_tsn">ТТ-35 2ТСН</string>
    <string name="tt_35_3_tsn">ТТ-35 3ТСН</string>
    <string name="tt_35_2_tsn_A">ТТ-35 2ТСН ф.А</string>
    <string name="tt_35_2_tsn_B">ТТ-35 2ТСН ф.В</string>
    <string name="tt_35_2_tsn_C">ТТ-35 2ТСН ф.С</string>
    <string name="tt_35_3_tsn_A">ТТ-35 3ТСН ф.А</string>
    <string name="tt_35_3_tsn_B">ТТ-35 3ТСН ф.В</string>
    <string name="tt_35_3_tsn_C">ТТ-35 3ТСН ф.С</string>
    <string name="v_35_2_tsn_A">В-35 2ТСН ф.А</string>
    <string name="v_35_2_tsn_B">В-35 2ТСН ф.В</string>
    <string name="v_35_2_tsn_C">В-35 2ТСН ф.С</string>
    <string name="v_35_3_tsn_A">В-35 3ТСН ф.А</string>
    <string name="v_35_3_tsn_B">В-35 3ТСН ф.В</string>
    <string name="v_35_3_tsn_C">В-35 3ТСН ф.С</string>
    <string name="tn_35_2atg">ТН-35 2АТГ</string>
    <string name="tn_35_3atg">ТН-35 3АТГ</string>

    <string name="oru_500">ОРУ-500</string>
    <string name="tt_500_trachukovskaya">ТТ-500 Трачуковская</string>
    <string name="tn2_500_trachukovskaya">2ТН-500 Трачуковская</string>
    <string name="tn1_500_trachukovskaya">1ТН-500 Трачуковская</string>
    <string name="tn_500_belozernaya">ТН-500 Белозёрная</string>
    <string name="atg_r_500_2_s">АТГ, Р-500 2С</string>
    <string name="v_500_r_500_2s">В-500 Р-500 2С</string>
    <string name="v_500_vsht_31">В-500 ВШТ-31</string>
    <string name="tt_500_vsht_31">ТТ-500 ВШТ-31</string>
    <string name="v_500_vlt_30">В-500 ВЛТ-30</string>
    <string name="tt_500_vlt_30">ТТ-500 ВЛТ-30</string>
    <string name="v_500_vshl_32">В-500 ВШЛ-32</string>
    <string name="tt_500_vshl_32">ТТ-500 ВШЛ-32</string>
    <string name="v_500_vshl_21">В-500 ВШЛ-21</string>
    <string name="tt_500_vshl_21">ТТ-500 ВШЛ-21</string>
    <string name="v_500_vsht_22">В-500 ВШТ-22</string>
    <string name="tt_500_vsht_22">ТТ-500 ВШТ-22</string>
    <string name="v_500_vsht_11">В-500 ВШТ-11</string>
    <string name="tt_500_vsht_11">ТТ-500 ВШТ-11</string>
    <string name="v_500_vshl_12">В-500 ВШЛ-12</string>
    <string name="tt_500_vshl_12">ТТ-500 ВШЛ-12</string>
    <string name="tn1_500">1ТН-500</string>
    <string name="tn2_500">2ТН-500</string>
    <string name="tn_500_sgres_1">ТН-500 СГРЭС-1</string>
    <string name="cascade1">1 каскад</string>
    <string name="cascade2">2 каскад</string>
    <string name="cascade3">3 каскад</string>
    <string name="cascade4">4 каскад</string>
    <string name="atg_2_C">2 АТГ ф.С</string>
    <string name="oil_lvl_tank">Уровень масла Бак</string>
    <string name="oil_lvl_rpn">Уровень масла РПН</string>
    <string name="pressure_500_kV">Ввод 500 кВ</string>
    <string name="pressure_220_kV">Ввод 220 кВ</string>
    <string name="temperature_TS_1">Температура ТС1</string>
    <string name="temperature_TS_2">Температура ТС2</string>
    <string name="oil_pump_pressure">Давление манометров маслонасосов</string>
    <string name="group_1">1 группа</string>
    <string name="group_2">2 группа</string>
    <string name="group_3">3 группа</string>
    <string name="group_4">4 группа</string>
    <string name="atg_2_B">2 АТГ ф.В</string>
    <string name="atg_2_A">2 АТГ ф.А</string>
    <string name="atg_reserve">АТГ резер. фаза (3АТГ ф.А)</string>
    <string name="atg_3_C">3 АТГ ф.С</string>
    <string name="atg_3_B">3 АТГ ф.В</string>
    <string name="atg_3_A">3 АТГ ф.А (расшинован)</string>
    <string name="reactor_500_2c_C">Реактор Р-500 2С ф.С</string>
    <string name="temperature_TS">Температура ТС</string>
    <string name="tt_neutral">ТТ нейтрали</string>
    <string name="reactor_500_2s_B">Реактор Р-500 2С ф.В</string>
    <string name="reactor_500_2s_A">Реактор Р-500 2С ф.А</string>
    <string name="trachukovskaya">Трачуковская</string>
    <string name="v_500_vlt_20">В-500 ВЛТ-20</string>
    <string name="tt_500_vlt_20">ТТ-500 ВЛТ-20</string>


    <string name="oru_220">ОРУ-220</string>
    <string name="mirnaya">Мирная</string>
    <string name="topaz">Топаз</string>
    <string name="o_v">ОВ</string>
    <string name="atg_2">2АТГ</string>
    <string name="sh_s_v">ШСВ</string>
    <string name="atg_3">3АТГ</string>
    <string name="orbita">Орбита</string>
    <string name="fakel">Факел</string>
    <string name="comet_2">Комета-2</string>
    <string name="comet_1">Комета-1</string>
    <string name="v_220">В-220</string>
    <string name="tt_220">ТТ-220</string>
    <string name="sh_s_v_220">ШСВ-220</string>
    <string name="v_220_mirnaya">В-220 Мирная</string>
    <string name="tt_220_mirnaya">ТТ-220 Мирная</string>
    <string name="v_220_topaz">В-220 Топаз</string>
    <string name="tt_220_topaz">ТТ-220 Топаз</string>
    <string name="ov_220">ОВ-220</string>
    <string name="tt_220_ov">ТТ-220 ОВ</string>
    <string name="v_220_2atg">В-220 2АТГ</string>
    <string name="tt_220_2atg">ТТ-220 2АТГ</string>
    <string name="tt_220_sh_s_v">ТТ-220 ШСВ</string>
    <string name="v_220_3atg">В-220 3АТГ</string>
    <string name="tt_220_3atg">ТТ-220 3АТГ</string>
    <string name="v_220_orbita">В-220 Орбита</string>
    <string name="tt_220_orbita">ТТ-220 Орбита</string>
    <string name="v_220_fakel">В-220 Факел</string>
    <string name="tt_220_fakel">ТТ-220 Факел</string>
    <string name="v_220_cometa1">В-220 Комета-1</string>
    <string name="tt_220_cometa1">ТТ-220 Комета-1</string>
    <string name="v_220_cometa2">В-220 Комета-2</string>
    <string name="tt_220_cometa2">ТТ-220 Комета-2</string>

    <string name="tn_220_o_s_sh">ТН-220 ОСШ ф.В</string>
    <string name="tn_220_1">1ТН-220</string>
    <string name="tn_220_2">2ТН-220</string>

    <string name="buildings">Здания и помещения</string>
    <string name="tn_500_header">=== ТН-500 ===</string>
    <string name="tsn">ТСН</string>
    <string name="v_35_2_tsn">В-35 2ТСН</string>
    <string name="v_35_3_tsn">В-35 3ТСН</string>
    <string name="tn_35">ТН-35</string>

    <string name="zapolnit">Заполнить</string>
    <string name="add_photo">Добавить фото</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="fill_all">Заполнить все</string>

</resources>