<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InspectionORU35">

    <LinearLayout
        android:id="@+id/tsn_2_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tsn_2_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tsn_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tsn_2_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tsn_3_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsn_2_layout">

        <TextView
            android:id="@+id/tsn_3_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tsn_3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tsn_3_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tsn_4_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsn_3_layout">

        <TextView
            android:id="@+id/tsn_4_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tsn4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tsn_4_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_2_tsn_A_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_after_tsn">

        <TextView
            android:id="@+id/tt_35_2_tsn_A_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_2_tsn_A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tt_35_2_tsn_A_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_2_tsn_B_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_35_2_tsn_A_layout">

        <TextView
            android:id="@+id/tt_35_2_tsn_B_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_2_tsn_B"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-87dp"
            tools:layout_editor_absoluteY="415dp" />

        <EditText
            android:id="@+id/tt_35_2_tsn_B_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="415dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_2_tsn_C_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_35_2_tsn_B_layout">

        <TextView
            android:id="@+id/tt_35_2_tsn_C_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_2_tsn_C"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-87dp"
            tools:layout_editor_absoluteY="415dp" />

        <EditText
            android:id="@+id/tt_35_2_tsn_C_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="415dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_3_tsn_A_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_after_tt_35_2">

        <TextView
            android:id="@+id/tt_35_3_tsn_A_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_3_tsn_A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tt_35_3_tsn_A_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_3_tsn_B_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_35_3_tsn_A_layout">

        <TextView
            android:id="@+id/tt_35_3_tsn_B_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_3_tsn_B"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-87dp"
            tools:layout_editor_absoluteY="415dp" />

        <EditText
            android:id="@+id/tt_35_3_tsn_B_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="415dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tt_35_3_tsn_C_layout"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_35_3_tsn_B_layout">

        <TextView
            android:id="@+id/tt_35_3_tsn_C_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tt_35_3_tsn_C"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-87dp"
            tools:layout_editor_absoluteY="415dp" />

        <EditText
            android:id="@+id/tt_35_tsn_C_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/oil_level"
            android:inputType="number|numberSigned"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="415dp" />
    </LinearLayout>

    <View
        android:id="@+id/divider_after_tsn"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tsn_4_layout" />

    <View
        android:id="@+id/divider_after_tt_35_2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_35_2_tsn_C_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>